app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sample-go
  name: sample-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-go
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample-go
    spec:
      containers:
      - image: quay.io/christianh814/simple-go:latest
        name: sample-go
        volumeMounts:
        - forceerrorforargodebug
        - name: config-vol
          mountPath: /etc/myapp
        resources: {}
      volumes:
        - name: config-vol
          configMap:
            name: myconfig
