app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/path-rewrite: "/"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "haproxy"
  labels:
    app: sample-go
  name: sample-go-ingress
spec:
  rules:
  - host: sample-go.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-go
            port:
              number: 8080
